sonar pass 4: more constants, math.clamp, unnamed catch, gradle -all wrapper